--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -38,7 +38,7 @@
       "metadata": {
         "id": "_gF3OazUhJzL",
         "colab_type": "code",
-        "outputId": "25b5a452-e876-4fea-9e4f-59e0d69d3799",
+        "outputId": "6179a6b6-b887-44ec-dd50-f17befcbcb37",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128
@@ -51,7 +51,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 0,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,10 +134,10 @@
       "metadata": {
         "id": "UfKTzPGsicBM",
         "colab_type": "code",
-        "outputId": "220a3a12-6064-430b-8bb9-9f504147c441",
+        "outputId": "1b27757b-9660-4fd5-d255-5ae535f6a127",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 1000
         }
       },
       "source": [
@@ -159,105 +159,147 @@
         "  strike_price_list.append(strike_price)\n",
         "  calloi_list.append(calloi)\n",
         "  putoi_list.append(putoi)\n",
-        "  #print(str(td_columns[1]).replace(',', ''))\n",
+        "  #print(strike_price)\n",
+        "  print(int(float(BeautifulSoup(str(td_columns[11]), 'html.parser').get_text())))\n",
         "\n",
         "df = pd.DataFrame(list(zip(strike_price_list,calloi_list,putoi_list)),columns=['strik','calloi','putoi'])\n",
-        "df.head()\n",
+        "#df.head()\n",
         "  "
       ],
-      "execution_count": 0,
+      "execution_count": 75,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>strik</th>\n",
-              "      <th>calloi</th>\n",
-              "      <th>putoi</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>8100</td>\n",
-              "      <td>2700</td>\n",
-              "      <td>281925</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>8150</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>8200</td>\n",
-              "      <td>375</td>\n",
-              "      <td>1875</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>8250</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>8300</td>\n",
-              "      <td>84450</td>\n",
-              "      <td>594000</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   strik  calloi   putoi\n",
-              "0   8100    2700  281925\n",
-              "1   8150       0       0\n",
-              "2   8200     375    1875\n",
-              "3   8250       0       0\n",
-              "4   8300   84450  594000"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
+          "output_type": "stream",
+          "text": [
+            "8100\n",
+            "8150\n",
+            "8200\n",
+            "8250\n",
+            "8300\n",
+            "8350\n",
+            "8400\n",
+            "8450\n",
+            "8500\n",
+            "8550\n",
+            "8600\n",
+            "8650\n",
+            "8700\n",
+            "8750\n",
+            "8800\n",
+            "8850\n",
+            "8900\n",
+            "8950\n",
+            "9000\n",
+            "9050\n",
+            "9100\n",
+            "9150\n",
+            "9200\n",
+            "9250\n",
+            "9300\n",
+            "9350\n",
+            "9400\n",
+            "9450\n",
+            "9500\n",
+            "9550\n",
+            "9600\n",
+            "9650\n",
+            "9700\n",
+            "9750\n",
+            "9800\n",
+            "9850\n",
+            "9900\n",
+            "9950\n",
+            "10000\n",
+            "10050\n",
+            "10100\n",
+            "10150\n",
+            "10200\n",
+            "10250\n",
+            "10300\n",
+            "10350\n",
+            "10400\n",
+            "10450\n",
+            "10500\n",
+            "10550\n",
+            "10600\n",
+            "10650\n",
+            "10700\n",
+            "10750\n",
+            "10800\n",
+            "10850\n",
+            "10900\n",
+            "10950\n",
+            "11000\n",
+            "11050\n",
+            "11100\n",
+            "11150\n",
+            "11200\n",
+            "11250\n",
+            "11300\n",
+            "11350\n",
+            "11400\n",
+            "11450\n",
+            "11500\n",
+            "11550\n",
+            "11600\n",
+            "11650\n",
+            "11700\n",
+            "11750\n",
+            "11800\n",
+            "11850\n",
+            "11900\n",
+            "11950\n",
+            "12000\n",
+            "12050\n",
+            "12100\n",
+            "12150\n",
+            "12200\n",
+            "12250\n",
+            "12300\n",
+            "12350\n",
+            "12400\n",
+            "12450\n",
+            "12500\n",
+            "12550\n",
+            "12600\n",
+            "12650\n",
+            "12700\n",
+            "12750\n",
+            "12800\n",
+            "12850\n",
+            "12900\n",
+            "12950\n",
+            "13000\n",
+            "13050\n",
+            "13100\n",
+            "13150\n",
+            "13200\n",
+            "13250\n",
+            "13300\n",
+            "13350\n",
+            "13400\n",
+            "13450\n",
+            "13500\n",
+            "13550\n",
+            "13600\n",
+            "13650\n",
+            "13700\n",
+            "13750\n",
+            "13800\n",
+            "13850\n",
+            "13900\n",
+            "14000\n",
+            "14100\n",
+            "14200\n",
+            "14300\n",
+            "14400\n",
+            "14500\n",
+            "14600\n",
+            "14700\n"
+          ],
+          "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8GFbme5VAiSW",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df['helpcall'] = df['strik'] - df.loc[0,'strik']\n",
-        "df['helpput'] = df['strik'].iloc[-1] - df['strik']"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -271,11 +313,12 @@
         }
       },
       "source": [
-        "strike=[7000,7100,7200,7300,7400,7500,7600,7700,7800,7900,8000,8100,8200,8300,8400,8500,8600]\n",
-        "calloi=[1404300,335700,482100,422475,963900,999975,785550,1823400,3448575,5367450,6510975,5900325,5113350,3844500,2135625,2252250,1083750]\n",
-        "putoi=[4087050,1029150,2977875,1975650,2336700,4548450,3690900,5783025,4864125,2559375,1447125,310500,248775,355725,255525,488475,58500]\n",
-        "frame={'strike':strike,'calloi':calloi,'putoi':putoi}\n",
-        "dft=pd.DataFrame(frame)\n",
+        "#strike=[7000,7100,7200,7300,7400,7500,7600,7700,7800,7900,8000,8100,8200,8300,8400,8500,8600]\n",
+        "#calloi=[1404300,335700,482100,422475,963900,999975,785550,1823400,3448575,5367450,6510975,5900325,5113350,3844500,2135625,2252250,1083750]\n",
+        "#putoi=[4087050,1029150,2977875,1975650,2336700,4548450,3690900,5783025,4864125,2559375,1447125,310500,248775,355725,255525,488475,58500]\n",
+        "#frame={'strike':strike,'calloi':calloi,'putoi':putoi}\n",
+        "#dft=pd.DataFrame(frame)\n",
+        "dft = dft\n",
         "\n",
         "dft['helpcall'] = dft['strike'] - dft.loc[0,'strike']\n",
         "\n",
