--- a/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
+++ b/PCR_MaxPain_high_OI_change_in_OI_nifty.ipynb
@@ -26,6 +26,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "6oV56dxdl6Tu",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Max Pain Calculation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EvqjxE8QhinG",
         "colab_type": "text"
       },
@@ -51,7 +61,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive' , force_remount=True)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +174,7 @@
         "df.head()\n",
         "  "
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +299,7 @@
         "dft['Total'] = dft['ccall']+dft['cput']\n",
         "print(df[df['Total']==dft['Total'].min()])"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,11 +316,11 @@
       "metadata": {
         "id": "41yUjibEBEHN",
         "colab_type": "code",
+        "outputId": "290cdfff-a073-431d-b5d6-0c6a4783a0e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 762
-        },
-        "outputId": "290cdfff-a073-431d-b5d6-0c6a4783a0e4"
+        }
       },
       "source": [
         "# Import libraries\n",
@@ -326,7 +336,7 @@
         "plt.xticks(rotation=90)\n",
         "plt.show()"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -339,218 +349,6 @@
           "metadata": {
             "tags": []
           }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oi9yHKAYCBxZ",
-        "colab_type": "code",
-        "outputId": "32b9bdf9-0556-4614-c329-67c94cf24a1c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
-      },
-      "source": [
-        "df.head()"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>strik</th>\n",
-              "      <th>calloi</th>\n",
-              "      <th>putoi</th>\n",
-              "      <th>helpcall</th>\n",
-              "      <th>helpput</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>8100</td>\n",
-              "      <td>2700</td>\n",
-              "      <td>281925</td>\n",
-              "      <td>0</td>\n",
-              "      <td>6600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>8150</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>50</td>\n",
-              "      <td>6550</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>8200</td>\n",
-              "      <td>375</td>\n",
-              "      <td>1875</td>\n",
-              "      <td>100</td>\n",
-              "      <td>6500</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>8250</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>150</td>\n",
-              "      <td>6450</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>8300</td>\n",
-              "      <td>84450</td>\n",
-              "      <td>594000</td>\n",
-              "      <td>200</td>\n",
-              "      <td>6400</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   strik  calloi   putoi  helpcall  helpput\n",
-              "0   8100    2700  281925         0     6600\n",
-              "1   8150       0       0        50     6550\n",
-              "2   8200     375    1875       100     6500\n",
-              "3   8250       0       0       150     6450\n",
-              "4   8300   84450  594000       200     6400"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 20
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5cWcc0ypCGx-",
-        "colab_type": "code",
-        "outputId": "964dfc3e-6026-4ebb-e49e-1ac6ebebf39d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
-      },
-      "source": [
-        "df.tail()"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>strik</th>\n",
-              "      <th>calloi</th>\n",
-              "      <th>putoi</th>\n",
-              "      <th>helpcall</th>\n",
-              "      <th>helpput</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>120</th>\n",
-              "      <td>14300</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>6200</td>\n",
-              "      <td>400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>121</th>\n",
-              "      <td>14400</td>\n",
-              "      <td>1800</td>\n",
-              "      <td>0</td>\n",
-              "      <td>6300</td>\n",
-              "      <td>300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>122</th>\n",
-              "      <td>14500</td>\n",
-              "      <td>46650</td>\n",
-              "      <td>26100</td>\n",
-              "      <td>6400</td>\n",
-              "      <td>200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>123</th>\n",
-              "      <td>14600</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>6500</td>\n",
-              "      <td>100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>124</th>\n",
-              "      <td>14700</td>\n",
-              "      <td>11700</td>\n",
-              "      <td>0</td>\n",
-              "      <td>6600</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "     strik  calloi  putoi  helpcall  helpput\n",
-              "120  14300       0      0      6200      400\n",
-              "121  14400    1800      0      6300      300\n",
-              "122  14500   46650  26100      6400      200\n",
-              "123  14600       0      0      6500      100\n",
-              "124  14700   11700      0      6600        0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
         }
       ]
     },
@@ -580,6 +378,75 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "26Z1q1wil0tv",
+        "colab_type": "text"
+      },
+      "source": [
+        "#The Put Call Ratio"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FnBGVOaGm5ox",
+        "colab_type": "text"
+      },
+      "source": [
+        "The ratio helps us identify extreme bullishness or bearishness in the market. PCR is usually considered a contrarian indicator. \n",
+        "\n",
+        "\n",
+        "    If the PCR value is above 1, say 1.3 – then it suggests that there are more Puts being bought compared to Calls. This suggests that the markets have turned extremely bearish, and therefore sort of oversold. One can look for reversals and expect the markets to go up.\n",
+        "\n",
+        "    Low PCR values such as 0.5 and below indicates that there are more calls being bought compared to puts. This suggests that the markets have turned extremely bullish, and therefore sort of overbought. Once can look for reversals and expect the markets to go down.\n",
+        "    \n",
+        "    All values between 0.5 and 1 can be attributed to regular trading activity and can be ignored.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6hMSNR9Lmhi1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "strike=[7000,7100,7200,7300,7400,7500,7600,7700,7800,7900,8000,8100,8200,8300,8400,8500,8600]\n",
+        "calloi=[1404300,335700,482100,422475,963900,999975,785550,1823400,3448575,5367450,6510975,5900325,5113350,3844500,2135625,2252250,1083750]\n",
+        "putoi=[4087050,1029150,2977875,1975650,2336700,4548450,3690900,5783025,4864125,2559375,1447125,310500,248775,355725,255525,488475,58500]\n",
+        "frame={'strike':strike,'calloi':calloi,'putoi':putoi}\n",
+        "dft=pd.DataFrame(frame)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yz7UsiAfl5L1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f06a786a-3d1c-47d8-91ea-d471d994f966"
+      },
+      "source": [
+        "print('Put Call Ratio = ', (sum(dft['putoi'])/sum(dft['calloi'])))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Put Call Ratio =  0.8633846229200778\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
