--- a/Nifty_Prediction.ipynb
+++ b/Nifty_Prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Nifty Prediction.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMPzW6siPk7+GeW32b9D/Vc",
+      "authorship_tag": "ABX9TyNthsRi0TAWS/0e+aZ8q+p/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#Importing the required packages"
+        "#Time series analysis Importing the required packages"
       ]
     },
     {
@@ -775,6 +775,7 @@
         "colab_type": "text"
       },
       "source": [
+        "#3 model Prediction\n",
         "https://towardsdatascience.com/3-time-series-models-anyone-can-build-e6943b017c41"
       ]
     },
@@ -1439,7 +1440,7 @@
         "                       end='2020-04-03', \n",
         "                       data_source='yahoo')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1849,7 +1850,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#Forecasting\n"
+        "# Holt Winder Forecasting\n"
       ]
     },
     {
@@ -1868,7 +1869,7 @@
         "test_data = df.iloc[2713:]\n",
         "print(len(train_data), len(test_data))"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2234,7 +2235,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#Forecasting for the future"
+        "#Holt Winder Forecasting for the future"
       ]
     },
     {
@@ -2251,7 +2252,7 @@
       "source": [
         "model = ExponentialSmoothing(df['Adj Close'],trend = 'add',seasonal='mul',seasonal_periods=5).fit()"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2277,7 +2278,7 @@
       "source": [
         "test = model.predict()"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2294,16 +2295,16 @@
       "metadata": {
         "id": "kocyHgF6e7oV",
         "colab_type": "code",
+        "outputId": "6fad0d9f-8eca-4d00-e397-92d644e1fa36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 237
-        },
-        "outputId": "6fad0d9f-8eca-4d00-e397-92d644e1fa36"
+        }
       },
       "source": [
         "df.tail()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2381,16 +2382,16 @@
       "metadata": {
         "id": "s9BscWjweiHr",
         "colab_type": "code",
+        "outputId": "15a39204-ebfc-498e-89e1-ab7b7a4c7f39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "15a39204-ebfc-498e-89e1-ab7b7a4c7f39"
+        }
       },
       "source": [
         "test"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2412,16 +2413,16 @@
       "metadata": {
         "id": "aFfGWpvJfSUf",
         "colab_type": "code",
+        "outputId": "13d9dd11-7c93-4bd5-9a13-7f48fe1e6b4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        },
-        "outputId": "13d9dd11-7c93-4bd5-9a13-7f48fe1e6b4c"
+        }
       },
       "source": [
         "test_forecast = model.forecast(4)"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2438,16 +2439,16 @@
       "metadata": {
         "id": "van18nKufava",
         "colab_type": "code",
+        "outputId": "1f1e517f-b02a-496e-8ff5-83a4f345c1d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 108
-        },
-        "outputId": "1f1e517f-b02a-496e-8ff5-83a4f345c1d5"
+        }
       },
       "source": [
         "test_forecast"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2521,16 +2522,16 @@
       "metadata": {
         "id": "gqYB83u4i6pq",
         "colab_type": "code",
+        "outputId": "d9ad16b8-228c-4735-e9e9-c21bd25c0325",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
-        },
-        "outputId": "d9ad16b8-228c-4735-e9e9-c21bd25c0325"
+        }
       },
       "source": [
         "df_diff.plot()"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
